# reth

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_SSA_ANALYZER.md  build.limit.sh  node_up_collect.sh  node_up_deter.sh  node_up_optim.sh  node_up_seq.sh  reth.toml
.github/workflows/: book.yml  hive.yml  integration.yml  kurtosis-op.yml  kurtosis.yml  lint.yml  release.yml  unit.yml
crates/altius/: Cargo.toml
crates/altius/src/: config.rs  lib.rs
crates/chainspec/res/genesis/: altius.json
crates/chainspec/src/: lib.rs  spec.rs
crates/cli/commands/: Cargo.toml
crates/cli/commands/src/: lib.rs  node.rs  profiler.rs
crates/consensus/consensus/: Cargo.toml
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/tree/: mod.rs
crates/era-downloader/tests/res/: nimbus.html
crates/ethereum/cli/src/: chainspec.rs
crates/evm/: Cargo.toml
crates/evm/src/: execute.rs  lib.rs  metrics.rs  test_utils.rs
crates/tracing/src/: lib.rs
crates/trie/common/: Cargo.toml
crates/trie/common/src/: proofs.rs  updates.rs
crates/trie/parallel/src/: proof.rs  proof_task.rs
crates/trie/trie/src/: trie.rs
docs/: alnode.md
examples/altius-reth/: Cargo.toml  README.md
examples/altius-reth/src/: main.rs
examples/analyze_graph_nodes/: Cargo.toml  README.md
examples/analyze_graph_nodes/src/: main.rs
examples/query_graph_nodes/: Cargo.toml
examples/query_graph_nodes/src/: main.rs
script/: analyze_entrypoint_distribution.py  analyze_graph_nodes.rs  analyze_path_hash_pareto.py  compare_state_cache.py  extract_block_stats.sh  extreme_compress.sh  query_graph_nodes.rs
(+9 files in other folders)
